shesmu-server/src/test/resources/bad/ternaryif-nesting.shesmu
Input gsi_std;

Olive Run ok With { ok = (True ? 3 : 4 ? 5 : 6) == 3  }
